Add caching on idempotent path

--- a/proxy_w_cache.conf
+++ b/proxy_w_cache.conf
@@ -6,21 +6,25 @@ upstream read_service {
 	server 127.0.0.1:9000;
 }
 
+proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=read_npm_cache:10m inactive=24h  max_size=1g;
+
 server {
 	listen 53322;
 	listen [::]:53322;
 
 	server_name infralabs.cs.ui.ac.id;
 
-	location /update/ {
-		proxy_pass http://update_service/;
+	location /update {
+		proxy_pass http://update_service;
 	}
 
-	location ~ "^/read/\d{10}" {
+	location ~ "^/read/\d{10}$" {
 		proxy_pass http://read_service;
 	}
 
-	location ~ "^/read/\d{10}/\d+" {
+	location ~ "^/read/\d{10}/\d+$" {
+		proxy_cache read_npm_cache;
+		proxy_cache_valid 200 24h;
 		proxy_pass http://read_service;
 	}
 }
